# fastapi-openapi-mcp

./: .gitignore  CHANGELOG.md  README.md  TODO.md  bandit-report.json  openapi-mcp.code-workspace  pyproject.toml
.claude/: CLAUDE.md
.claude/memory/: README.md  coding-standards.md  development.md  examples.md  project-structure.md  troubleshooting.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  custom_config.py  custom_config_example.py  custom_tool_example.py  mcp_http_example.py  mcp_stdio_example.py  multi_app_example.py  performance_test_example.py  resources_tools_integration.py  search_example.py  security_example.py  test_mcp_connections.py
openapi_mcp/: __init__.py  cache.py  config.py  performance.py  security.py  server.py  transport.py
openapi_mcp/formatters/: __init__.py  base.py  json.py  markdown.py  plain.py
openapi_mcp/resources/: __init__.py  base.py  endpoints.py  manager.py  models.py  spec.py  tags.py
openapi_mcp/tools/: __init__.py  base.py  examples.py  search.py
tests/: conftest.py  test_cache.py  test_formatter.py  test_formatters_integration.py  test_integration.py  test_performance.py  test_security.py  test_server.py  test_transport.py
tests/formatters/: __init__.py  test_json.py  test_markdown.py  test_plain.py
tests/resources/: __init__.py  test_integration.py
tests/tools/: __init__.py  test_base.py  test_core.py  test_examples.py  test_search.py
